# numpy-c-api

./: CMakeLists.txt  README.md  classes.py  copy_numpy_array.cpp  create_object.cpp  functions.py  hello_world.cpp  import_error.cpp  pass_pylist.cpp  python_interpreter.cpp  python_interpreter.hpp
